--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -4506,6 +4506,12 @@ input#send-to-input {
   padding: 20px;
 }
 
+.bp-messages-content #bp-message-content #whats-new-messages-toolbar {
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+}
+
 .bp-messages-content #bp-message-content .medium-editor-toolbar {
   top: inherit;
   bottom: 5px;
@@ -4537,10 +4543,15 @@ input#send-to-input {
   color: #122b46 !important;
 }
 
+.bp-messages-content #bp-message-content .medium-editor-toolbar .medium-editor-toolbar-actions button.medium-editor-action-close {
+  padding-right: 0;
+}
+
 .bp-messages-content #bp-message-content .medium-editor-toolbar .medium-editor-toolbar-form .medium-editor-toolbar-input {
   width: 220px;
 }
 
+.bp-messages-content #bp-message-content #message-form-submit-wrapper,
 .bp-messages-content #bp-message-content #message-reply-form-submit-wrapper {
   flex-direction: column;
   -webkit-box-pack: end;
@@ -4549,6 +4560,7 @@ input#send-to-input {
   margin: 0 -20px;
 }
 
+.bp-messages-content #bp-message-content #message-new-submit,
 .bp-messages-content #bp-message-content #message-reply-new-submit {
   padding: 20px 20px 0;
   text-align: right;
@@ -4560,6 +4572,11 @@ input#send-to-input {
   padding: 0 15px 15px;
   justify-content: flex-end;
   width: 100%;
+}
+
+.bp-messages-content #bp-message-content #whats-new-messages-toolbar .medium-editor-action-close,
+.bp-messages-content #bp-message-content #whats-new-messages-toolbar .show-toolbar {
+  display: none;
 }
 
 .messages .select2-dropdown {
@@ -4763,6 +4780,34 @@ body .bp-messages-user-threads {
   .bp-messages-user-threads,
   #bp-message-thread-list {
     max-height: 400px;
+  }
+  .bp-messages-content #bp-message-content #whats-new-messages-toolbar .medium-editor-action-close,
+  .bp-messages-content #bp-message-content #whats-new-messages-toolbar .show-toolbar {
+    display: block;
+  }
+  .bp-messages-content #bp-message-content #whats-new-messages-toolbar .medium-editor-toolbar {
+    visibility: hidden;
+    opacity: 0;
+    transition: all ease 0.3s;
+    height: 0;
+    right: 0;
+    overflow: hidden;
+  }
+  .bp-messages-content #bp-message-content #whats-new-messages-toolbar .medium-editor-toolbar .medium-editor-toolbar-actions {
+    height: auto;
+  }
+  .bp-messages-content #bp-message-content #whats-new-messages-toolbar .medium-editor-toolbar.active {
+    display: block;
+    background-color: #f2f2f2;
+    border-radius: 0;
+    z-index: 112;
+    opacity: 1;
+    visibility: visible;
+    bottom: 0;
+    height: 40px;
+  }
+  .medium-editor-action-close b:before {
+    content: "\f153";
   }
 }
 
