#685 - Styled create meeting and meeting listing pages

--- a/src/bp-core/css/jquery.datetimepicker-rtl.css
+++ b/src/bp-core/css/jquery.datetimepicker-rtl.css
@@ -2,13 +2,13 @@
 	box-shadow: 0 5px 15px -5px rgba(0, 0, 0, 0.506);
 	background: #fff;
 	border-bottom: 1px solid #bbb;
-	border-left: 1px solid #ccc;
 	border-right: 1px solid #ccc;
+	border-left: 1px solid #ccc;
 	border-top: 1px solid #ccc;
 	color: #333;
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	padding: 8px;
-	padding-left: 0;
+	padding-right: 0;
 	padding-top: 2px;
 	position: absolute;
 	z-index: 9999;
@@ -18,12 +18,12 @@
 }
 
 .xdsoft_datetimepicker.xdsoft_rtl {
-	padding: 8px 0 8px 8px;
+	padding: 8px 8px 8px 0;
 }
 
 .xdsoft_datetimepicker iframe {
 	position: absolute;
-	left: 0;
+	right: 0;
 	top: 0;
 	width: 75px;
 	height: 210px;
@@ -79,14 +79,14 @@
 
 .xdsoft_datetimepicker .xdsoft_datepicker {
 	width: 224px;
-	float: left;
-	margin-left: 8px;
+	float: right;
+	margin-right: 8px;
 }
 
 .xdsoft_datetimepicker.xdsoft_rtl .xdsoft_datepicker {
-	float: right;
-	margin-right: 8px;
-	margin-left: 0;
+	float: left;
+	margin-left: 8px;
+	margin-right: 0;
 }
 
 .xdsoft_datetimepicker.xdsoft_showweeks .xdsoft_datepicker {
@@ -95,16 +95,16 @@
 
 .xdsoft_datetimepicker .xdsoft_timepicker {
 	width: 58px;
-	float: left;
+	float: right;
 	text-align: center;
-	margin-left: 8px;
+	margin-right: 8px;
 	margin-top: 0;
 }
 
 .xdsoft_datetimepicker.xdsoft_rtl .xdsoft_timepicker {
-	float: right;
-	margin-right: 8px;
-	margin-left: 0;
+	float: left;
+	margin-left: 8px;
+	margin-right: 0;
 }
 
 .xdsoft_datetimepicker .xdsoft_datepicker.active + .xdsoft_timepicker {
@@ -134,19 +134,19 @@
 }
 
 .xdsoft_datetimepicker .xdsoft_prev {
-	float: left;
+	float: right;
 	background-position: -20px 0;
 }
 
 .xdsoft_datetimepicker .xdsoft_today_button {
-	float: left;
+	float: right;
 	background-position: -70px 0;
-	margin-left: 5px;
+	margin-right: 5px;
 }
 
 .xdsoft_datetimepicker .xdsoft_next {
-	float: right;
-	background-position: 0 0;
+	float: left;
+	background-position: 100% 0;
 }
 
 .xdsoft_datetimepicker .xdsoft_next,
@@ -177,15 +177,15 @@
 	height: 15px;
 	width: 30px;
 	display: block;
-	margin-left: 14px;
+	margin-right: 14px;
 	margin-top: 7px;
 }
 
 .xdsoft_datetimepicker.xdsoft_rtl .xdsoft_timepicker .xdsoft_prev,
 .xdsoft_datetimepicker.xdsoft_rtl .xdsoft_timepicker .xdsoft_next {
 	float: none;
-	margin-left: 0;
-	margin-right: 14px;
+	margin-right: 0;
+	margin-left: 14px;
 }
 
 .xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_prev {
@@ -234,7 +234,7 @@
 	line-height: 20px;
 	font-weight: 500;
 	background-color: #fff;
-	float: left;
+	float: right;
 	width: 182px;
 	text-align: center;
 	cursor: pointer;
@@ -251,7 +251,7 @@
 .xdsoft_datetimepicker .xdsoft_label > .xdsoft_select {
 	border: 1px solid #ccc;
 	position: absolute;
-	right: 0;
+	left: 0;
 	top: 30px;
 	z-index: 101;
 	display: none;
@@ -261,11 +261,11 @@
 }
 
 .xdsoft_datetimepicker .xdsoft_label > .xdsoft_select.xdsoft_monthselect {
-	right: -7px;
+	left: -7px;
 }
 
 .xdsoft_datetimepicker .xdsoft_label > .xdsoft_select.xdsoft_yearselect {
-	right: 2px;
+	left: 2px;
 }
 
 .xdsoft_datetimepicker .xdsoft_label > .xdsoft_select > div > .xdsoft_option:hover {
@@ -274,7 +274,7 @@
 }
 
 .xdsoft_datetimepicker .xdsoft_label > .xdsoft_select > div > .xdsoft_option {
-	padding: 2px 10px 2px 5px;
+	padding: 2px 5px 2px 10px;
 	text-decoration: none !important;
 }
 
@@ -287,7 +287,7 @@
 
 .xdsoft_datetimepicker .xdsoft_month {
 	width: 100px;
-	text-align: right;
+	text-align: left;
 }
 
 .xdsoft_datetimepicker .xdsoft_calendar {
@@ -296,7 +296,7 @@
 
 .xdsoft_datetimepicker .xdsoft_year {
 	width: 48px;
-	margin-left: 5px;
+	margin-right: 5px;
 }
 
 .xdsoft_datetimepicker .xdsoft_calendar table {
@@ -306,7 +306,7 @@
 }
 
 .xdsoft_datetimepicker .xdsoft_calendar td > div {
-	padding-right: 5px;
+	padding-left: 5px;
 }
 
 .xdsoft_datetimepicker .xdsoft_calendar th {
@@ -320,7 +320,7 @@
 	border: 1px solid #ddd;
 	color: #666;
 	font-size: 12px;
-	text-align: right;
+	text-align: left;
 	vertical-align: middle;
 	padding: 0;
 	border-collapse: collapse;
@@ -408,7 +408,7 @@
 	font-size: 10px;
 	clear: both;
 	float: none;
-	margin-left: 8px;
+	margin-right: 8px;
 }
 
 .xdsoft_datetimepicker .xdsoft_copyright a {
@@ -433,15 +433,15 @@
 .xdsoft_scrollbar {
 	position: absolute;
 	width: 7px;
-	right: 0;
+	left: 0;
 	top: 0;
 	bottom: 0;
 	cursor: pointer;
 }
 
 .xdsoft_datetimepicker.xdsoft_rtl .xdsoft_scrollbar {
-	left: 0;
-	right: auto;
+	right: 0;
+	left: auto;
 }
 
 .xdsoft_scroller_box {
@@ -452,8 +452,8 @@
 	box-shadow: 0 5px 15px -5px rgba(255, 255, 255, 0.506);
 	background: #000;
 	border-bottom: 1px solid #444;
-	border-left: 1px solid #333;
 	border-right: 1px solid #333;
+	border-left: 1px solid #333;
 	border-top: 1px solid #333;
 	color: #ccc;
 }
@@ -577,10 +577,10 @@
 	color: #82878c;
 	height: 28px;
 	position: relative;
-	padding: 4px 17px 4px 33px;
+	padding: 4px 33px 4px 17px;
 	border: 1px solid #d7d8da;
 	background: -moz-linear-gradient(top, #fff 0%, #f4f8fa 73%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fff), color-stop(73%, #f4f8fa));
+	background: -webkit-gradient(linear, right top, right bottom, color-stop(0%, #fff), color-stop(73%, #f4f8fa));
 	background: -webkit-linear-gradient(top, #fff 0%, #f4f8fa 73%);
 	background: -o-linear-gradient(top, #fff 0%, #f4f8fa 73%);
 	background: -ms-linear-gradient(top, #fff 0%, #f4f8fa 73%);
@@ -594,7 +594,7 @@
 .xdsoft_datetimepicker .blue-gradient-button:focus span {
 	color: #454551;
 	background: -moz-linear-gradient(top, #f4f8fa 0%, #fff 73%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f4f8fa), color-stop(73%, #fff));
+	background: -webkit-gradient(linear, right top, right bottom, color-stop(0%, #f4f8fa), color-stop(73%, #fff));
 	background: -webkit-linear-gradient(top, #f4f8fa 0%, #fff 73%);
 	background: -o-linear-gradient(top, #f4f8fa 0%, #fff 73%);
 	background: -ms-linear-gradient(top, #f4f8fa 0%, #fff 73%);
