group messages confirmation bottom padding

--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -11971,7 +11971,7 @@ body.groups.messages span.select2-dropdown.select2-dropdown--below {
 }
 
 .bb-groups-messages-right-top {
-  padding: 20px;
+  padding: 20px 20px 0;
 }
 
 .bb-groups-messages-right-bottom {
@@ -11980,7 +11980,11 @@ body.groups.messages span.select2-dropdown.select2-dropdown--below {
 }
 
 .bp-select-members-wrap {
-  min-height: 94px;
+  min-height: 45px;
+}
+
+.bp-select-members-wrap .select2 {
+  margin-bottom: 20px;
 }
 
 body.groups.messages #send_group_message_form .select2-container--default .select2-selection--multiple .select2-selection__choice {
