--- a/src/bp-templates/bp-nouveau/common-styles/_bp_groups_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_groups_messages.scss
@@ -17,6 +17,22 @@
 
 			#group-messages-new-submit {
 				margin-top: 15px;
+				-webkit-box-orient: vertical;
+				-webkit-box-direction: normal;
+				-ms-flex-direction: column;
+				flex-direction: column;
+
+				.group-messages-type {
+					margin-bottom: 10px;
+				}
+			}
+
+			div.medium-editor-toolbar {
+				bottom: 65px;
+
+				&.active {
+					bottom: 79px;
+				}
 			}
 		}
 	}
@@ -406,7 +422,7 @@ span.icons:before {
 
 	.medium-editor-toolbar {
 		top: inherit;
-		bottom: 35px;
+		bottom: 45px;
 		left: -20px;
 		visibility: visible;
 		z-index: 99;
@@ -463,6 +479,11 @@ span.icons:before {
 		bottom: -11px;
 		transform: rotate(135deg);
 		right: 57px;
+	}
+
+	.medium-editor-action-close,
+	.show-toolbar {
+		display: none;
 	}
 }
 
@@ -750,4 +771,41 @@ span.icons:before {
 	.bb-groups-messages-right .medium-editor-placeholder:not(.emojionearea) {
 		min-height: 180px;
 	}
+}
+
+@media screen and (max-width: 768px) {
+
+	#group-messages-container #whats-new-toolbar {
+
+		.medium-editor-action-close,
+		.show-toolbar {
+			display: inline-block;
+		}
+
+		.medium-editor-toolbar {
+			visibility: hidden;
+			opacity: 0;
+			transition: all ease 0.3s;
+			height: 0;
+			right: 0;
+			overflow: hidden;
+
+			.medium-editor-toolbar-actions {
+				height: auto;
+			}
+
+			&.active {
+				display: block;
+				background-color: #f2f2f2;
+				border-radius: 0;
+				z-index: 112;
+				opacity: 1;
+				visibility: visible;
+				bottom: 45px;
+				height: 40px;
+				right: -20px;
+			}
+		}
+	}
+
 }
