--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -12367,6 +12367,11 @@ span.icons:before {
   display: flex;
   -ms-flex-flow: column;
   flex-flow: column;
+  overflow: auto;
+}
+
+.meeting-item-container h2 {
+  text-transform: capitalize;
 }
 
 .meeting-item-container .load-more {
@@ -12385,6 +12390,10 @@ span.icons:before {
   display: block;
 }
 
+.meeting-item-table {
+  min-width: 600px;
+}
+
 .meeting-item-table .meeting-item-header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -12398,7 +12407,7 @@ span.icons:before {
   color: #939597;
   ms-flex-preferred-size: 25%;
   /* stylelint-disable-line */
-  flex-basis: 60%;
+  flex-basis: 25%;
   text-transform: uppercase;
 }
 
@@ -12424,6 +12433,7 @@ span.icons:before {
   font-size: 14px;
   line-height: 1.3;
   color: #4d5c6d;
+  padding: 0 5px;
 }
 
 .meeting-item-table .meeting-item .meeting-item-col .meeting-link {
@@ -12433,8 +12443,84 @@ span.icons:before {
 
 .meeting-item-table .meeting-item .meeting-item-col.meeting-action {
   text-align: center;
+  padding: 0 5px;
 }
 
 .meeting-item-table .meeting-item .meeting-item-col.meeting-action #bp-zoom-meeting-view-recordings {
   margin-top: 10px;
+}
+
+.single-meeting-item-table {
+  min-width: auto;
+}
+
+.single-meeting-item-table .single-meeting-item {
+  border-bottom: 1px solid #e7e9ec;
+  margin-bottom: 15px;
+  padding: 0 0 15px 10px;
+}
+
+.single-meeting-item-table .single-meeting-item .meeting-item-head {
+  display: inline-block;
+  width: 220px;
+  font-size: 15px;
+  color: #939597;
+  margin-bottom: 0;
+}
+
+.single-meeting-item-table .single-meeting-item.last-col {
+  border-bottom: 0;
+}
+
+.single-meeting-item-table .single-meeting-item .meeting-item-col {
+  display: inline-block;
+  font-size: 15px;
+  line-height: 1.3;
+  color: #4d5c6d;
+}
+
+.single-meeting-item-table .single-meeting-item .meeting-item-col.last-col {
+  border-bottom: 0;
+}
+
+#buddypress .meeting-item-container .single-meeting-item-table .single-meeting-item .meeting-item-col.last-col .button {
+  margin-top: 0;
+}
+
+.single-meeting-item-table .single-meeting-item .meeting-item-col.full {
+  width: 100%;
+}
+
+.single-meeting-item-table .single-meeting-item .meeting-item-col .pull-right {
+  float: right;
+}
+
+.single-meeting-item-table .single-meeting-item .meeting-item-col.meeting-action button {
+  margin-top: 0;
+}
+
+.single-meeting-item-table .single-meeting-item .meeting-item-col a.delete {
+  margin-top: 7px;
+  display: inline-block;
+}
+
+@media screen and (max-width: 768px) {
+  .single-meeting-item-table .single-meeting-item .meeting-item-col {
+    width: 100%;
+  }
+  .single-meeting-item-table .single-meeting-item .meeting-item-col.last-col {
+    text-align: center;
+  }
+  .single-meeting-item-table .single-meeting-item .meeting-item-col.last-col .pull-right {
+    width: 100%;
+  }
+  #buddypress .meeting-item-container .single-meeting-item-table .single-meeting-item .meeting-item-col.last-col .button {
+    margin: 5px 0;
+  }
+  .single-meeting-item-table .single-meeting-item .meeting-item-head {
+    width: 100%;
+  }
+  .single-meeting-item-table .single-meeting-item .meeting-item-head:empty {
+    display: none;
+  }
 }
