--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -567,7 +567,8 @@ body.buddyboss_page_bbp-converter .bp-admin-card h2:before,
 }
 
 /* Integrations - Zoom Conference */
-.bp-admin-card.section-bp_zoom_settings_section h2:before {
+.bp-admin-card.section-bp_zoom_settings_section h2:before,
+.bp-admin-card.section-bp_zoom_users_section h2:before {
 	background-image: url(../../images/admin/icons/logos/zoom.png);
 	background-size: 100% 100%;
 }
