--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1779,6 +1779,17 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 		.media-folder_name_edit_wrap {
 			display: none;
 			padding-right: 5px;
+			position: relative;
+
+			&.submitting {
+				padding-right: 30px;
+
+				.bb-icon-loader {
+					position: absolute;
+					right: 15px;
+					top: 9px;
+				}
+			}
 
 			> a {
 				margin: 5px 0;
