--- a/src/bp-core/admin/sass/hello.scss
+++ b/src/bp-core/admin/sass/hello.scss
@@ -64,6 +64,13 @@ TABLE OF CONTENTS:
 		font-size: 16px;
 	}
 
+	ul.bp-hello-list {
+		list-style: disc;
+		margin-left: 25px;
+		font-size: 16px;
+		line-height: 1.3;
+	}
+
 	.video-wrapper {
 		margin: 0 auto;
 		height: calc(100%);
